snapshots/syntax/library/functions/math/abs/abs_in_comparison.snap
---
source: src/syntax/library/functions/math/abs.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: IfStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: IfKeyword
                  text: If
                - kind: Whitespace
                  text: " "
                - kind: BinaryExpression
                  children:
                    - kind: CallExpression
                      children:
                        - kind: Identifier
                          text: Abs
                        - kind: LeftParenthesis
                          text: (
                        - kind: ArgumentList
                          children:
                            - kind: Argument
                              children:
                                - kind: BinaryExpression
                                  children:
                                    - kind: IdentifierExpression
                                      children:
                                        - kind: Identifier
                                          text: x
                                    - kind: Whitespace
                                      text: " "
                                    - kind: SubtractionOperator
                                      text: "-"
                                    - kind: Whitespace
                                      text: " "
                                    - kind: IdentifierExpression
                                      children:
                                        - kind: Identifier
                                          text: y
                        - kind: RightParenthesis
                          text: )
                    - kind: Whitespace
                      text: " "
                    - kind: LessThanOperator
                      text: "<"
                    - kind: Whitespace
                      text: " "
                    - kind: IdentifierExpression
                      children:
                        - kind: Identifier
                          text: tolerance
                - kind: Whitespace
                  text: " "
                - kind: ThenKeyword
                  text: Then
                - kind: Newline
                  text: "\n"
                - kind: StatementList
                  children:
                    - kind: Whitespace
                      text: "        "
                    - kind: CallStatement
                      children:
                        - kind: Identifier
                          text: DoSomething
                        - kind: Newline
                          text: "\n"
                    - kind: Whitespace
                      text: "    "
                - kind: EndKeyword
                  text: End
                - kind: Whitespace
                  text: " "
                - kind: IfKeyword
                  text: If
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
